--- a/inicio.html
+++ b/inicio.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela inicial</title>
+    <link rel="stylesheet" href="css/inicio.css" />
 </head>
+
 <body>
-    
+    <div class="dashboard">
+        <div class="sidebar">
+            <h1 id="nome">Farmácia</h2>
+                <a href="#">Início</a>
+                <a href="#">Produtos</a>
+                <a href="#">Perfil</a>
+                <a href="#">Configurações</a>
+        </div>
+
+        <div class="content">
+            <h1>Dashboard</h1>
+        </div>
+    </div>
 </body>
+
 </html>
